--- a/.env
+++ b/.env
@@ -30,3 +30,6 @@ APP_SECRET=7c4efb3163308a3352b1a31bf1723832
 
 
 API_KEY="RGAPI-69fb2156-cff0-463e-a1a5-ab6318d96cf1"
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=(.*)
+###< nelmio/cors-bundle ###
